mod metodo per leggere json